# MEMESat-1-FSW_public

./: .gitignore  .gitmodules  README.md
eps-fw/stm32f103rb/: Kconfig
eps-fw/stm32f103rb/boards/: nucleo_f103rb.overlay
eps-fw/stm32f103rb/include/: obcComm.h  sensors.h  stateMachine.h
eps-fw/stm32f103rb/src/: obcComm.c  sensors.c  stateMachine.c
fsw/eps/: setup.sh
fsw/eps/nucleo-f103rb/: CMakeLists.txt  prj.conf
fsw/eps/nucleo-f103rb/src/: main.c
fsw/obc/: CMakeLists.txt  project.cmake  settings.ini
fsw/obc/Components/EpsUart/: EpsUart.hpp  EpsUart.template.hpp
fsw/obc/Components/MessageStorage/: MessageStorage.cpp
fsw/obc/Components/OTAUpdater/: OTAUpdater.cpp  OTAUpdater.hpp  note.md  note01.md
fsw/obc/Components/Scheduler/: CMakeLists.txt  Scheduler.fpp  Scheduler.hpp
fsw/obc/Components/StateMachine/: CMakeLists.txt  StateMachine.fpp  StateMachine.hpp.bak
fsw/obc/Components/TlmChanWrapper/: TlmChanWrapper.cpp  TlmChanWrapper.fpp
fsw/obc/Deployments/TcpClientDeployment/: Main.cpp  persistent_data.txt  segment_routine.sh
fsw/obc/Ports/: EpsUartPorts.fpp  FileRecyclerPorts.fpp  MessagePorts.fpp  SchedulerPorts.fpp  StateMachinePorts.fpp
fsw/obc/Types/: CMakeLists.txt  SchedulerTypes.fpp  StateMachineTypes.fpp  UpdaterTypes.fpp
libs/libcron/libcron/include/libcron/: Cron.h  (+1 more)
ms1-fsw/: CMakeLists.txt  README.md  project.cmake  settings.ini
ms1-fsw/Components/: CMakeLists.txt
ms1-fsw/Components/EpsUart/: CMakeLists.txt  EpsUart.cpp  EpsUart.cpp.bak  EpsUart.fpp  EpsUart.hpp.bak  EpsUart.template.cpp
ms1-fsw/Components/EpsUart/test/ut/: EpsUartTestMain.cpp  EpsUartTester.cpp  EpsUartTesterHelpers.cpp
ms1-fsw/Components/FileRecycler/: CMakeLists.txt  FileRecycler.cpp  FileRecycler.fpp  FileRecycler.hpp
ms1-fsw/Components/FileRecycler/test/ut/: FileRecyclerTestMain.cpp  FileRecyclerTester.hpp  FileRecyclerTesterHelpers.cpp
ms1-fsw/Components/MessageStorage/: CMakeLists.txt  MessageStorage.fpp  MessageStorage.hpp
ms1-fsw/Components/MessageStorage/test/ut/: MessageStorageTester.hpp  MessageStorageTesterHelpers.cpp
ms1-fsw/Components/OTAUpdater/: CMakeLists.txt  OTAUpdater.cpp.bak  OTAUpdater.fpp  OTAUpdater.hpp.bak
ms1-fsw/Components/OTAUpdater/test/ut/: OTAUpdaterTester.cpp
ms1-fsw/Components/Scheduler/: FppConstantsAc.cpp  FppConstantsAc.hpp  Scheduler.cpp
ms1-fsw/Components/Scheduler/test/ut/: SchedulerTester.cpp  SchedulerTester.hpp
ms1-fsw/Components/StateMachine/: FppConstantsAc.cpp  FppConstantsAc.hpp  StateMachine.cpp  StateMachine.cpp.bak  StateMachine.hpp  StateMachine.template.cpp  StateMachine.template.hpp
ms1-fsw/Components/StateMachine/test/ut/: StateMachineTester.cpp  StateMachineTesterHelpers.cpp
ms1-fsw/Components/TlmChanWrapper/: CMakeLists.txt  TlmChanWrapper.hpp
ms1-fsw/Components/TlmChanWrapper/test/ut/: TlmChanWrapperTester.cpp
ms1-fsw/Ports/: CMakeLists.txt  UpdaterPorts.fpp
ms1-fsw/TcpClientDeployment/: CMakeLists.txt  Main.cpp  README.md  schedule_list.txt
ms1-fsw/TcpClientDeployment/Top/: CMakeLists.txt  TcpClientDeploymentPackets.xml  TcpClientDeploymentTopology.cpp  TcpClientDeploymentTopology.hpp  TcpClientDeploymentTopologyDefs.hpp  topology.fpp
ms1-fsw/TcpClientDeployment/out_files/: output02.seg  output06.seg
ms1-fsw/TcpClientDeployment/updater_dir/: tracking.txt
ms1-fsw/TcpClientDeployment/updater_dir/ms1_photo/: index.txt
ms1-fsw/Types/: EpsUartTypes.fpp  FileRecyclerTypes.fpp  MessageTypes.fpp
ms1-fsw/libs/libcron/libcron/include/libcron/: CronClock.h  TaskQueue.h
ms1-fsw/libs/libcron/libcron/src/: CronSchedule.cpp
(+23 files in other folders)
